--- a/staticDistDir/index.html
+++ b/staticDistDir/index.html
@@ -50,6 +50,73 @@
   </nav>
   <div class="menu-overlay"></div>
   <div class="body-decoration"></div>
+
+  <div id="wrapper">
+    <header id="header">
+      <div id="header-menu-mobile" class="menu d-block d-xl-none">
+        <i class="bi bi-list"></i>
+      </div>
+
+      <div class="menu-wrapper">
+        <div class="header-container container">
+          <div class="header-content">
+
+            <div class="logo">
+              <a class="icon-move" href="#">
+                <img src="./assets/icons/logo.png" alt="Groovy logo">
+              </a>
+            </div>
+            <nav>
+              <ul class="menu d-none d-xl-flex">
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">Membership</a>
+                </li>
+                <li>
+                  <a href="#">Style Guide ✨</a>
+                </li>
+                <li>
+                  <a href="#">#Tag</a>
+                </li>
+                <li>
+                  <a href="#">More</a>
+                </li>
+                <li>
+                  <a aria-label="search button" href="#">
+                    <i class="bi bi-search"></i>
+                  </a>
+                </li>
+                <li>
+                  <a class="primary-md-button" href="#">Sig In</a>
+                </li>
+              </ul>
+              <div class="social-buttons d-none d-xl-block">
+                <a class="icon-move" target="_blank" href="https://www.linkedin.com/in/nicolasdelrosario/"
+                  aria-label="linkedin">
+                  <i class="bi bi-linkedin c-blue"></i>
+                </a>
+                <a class="icon-move" target="_blank" href="https://github.com/nicolasdelrosario" aria-label="github">
+                  <i class="bi bi-github c-soft-black"></i>
+                </a>
+                <a class="icon-move" target="_blank" href="https://twitter.com/Potato__Code" aria-label="twitter">
+                  <i class="bi bi-twitter c-sky-blue"></i>
+                </a>
+                <a class="icon-move" target="_blank" href="https://www.instagram.com/potatocode_/"
+                  aria-label="instagram">
+                  <i class="bi bi-instagram c-dark-fuchsia"></i>
+                </a>
+              </div>
+            </nav>
+            <a class="search-button d-xl-none" href="#">
+              <i class="bi bi-search"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </div>
 </body>
 
 </html>
