--- a/staticDistDir/index.html
+++ b/staticDistDir/index.html
@@ -11,7 +11,7 @@
     content="This project is a replica of the Groovy website. The goal is to showcase skills in web development and user interface design.">
   <title>Groovy Clone</title>
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href=".././.github/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../.github/favicon/favicon.ico">
   <!-- Font Families -->
   <!-- Jost and Outfit -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
